--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
         }
 
         body{
-          background-image: url("{{ url_for('static', filename='60_.jpg') }}"); 
+          background-image: url("{{ url_for('static', filename='602.jpg') }}"); 
           background-repeat: no-repeat; 
           background-size: 100% 120%;
         }
